Fixed `info` overflow issues

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -48,14 +48,17 @@ info {
 	
 	padding: var(--max-padding);
 	
-	max-width: 50%;
+	width: min(80vw, 500px);
 
 	border-radius: var(--section-corner-radius);
 
-	text-overflow: ellipsis;
-	
+	overflow-wrap: break-word;
+
 	background-color: var(--primary-200);
 	color: var(--foreground-20);
 	opacity: var(--min-opacity);
 }
-info::before { content: attr(title) " "; }
+info::before {
+	display: block;
+	content: attr(title) " ";
+}
